--- a/user_config.json
+++ b/user_config.json
@@ -72,7 +72,7 @@
     ],
     "modules": {
         "OpenShock": {
-            "api_key": "9MXFHsQU8PBmk7OZ5usGP77yy6PCXajE"
+            "api_key": ""
         }
     }
 }
